# metavoice-src

./: Makefile  pyproject.toml  serving.py
fam/llm/: decoders.py  inference.py  model.py  utils.py
fam/llm/layers/: attn.py
fam/quantiser/audio/speaker_encoder/: model.py
