[tool.poetry]
name = "metavoice"
version = "0.1.0"
description = "Foundational model for text to speech"
authors = ["metavoiceio"]
repository = "https://github.com/metavoiceio/metavoice-src"
documentation = "https://themetavoice.xyz/"
packages = [
    {include = "fam"},
    {include = "audiocraft"}
    ]


[tool.poetry.dependencies]
python = ">=3.10,<3.12"


[tool.poetry.group.torch.dependencies]
torch = "=2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
torchmetrics = "^1.3.1"
huggingface-hub = "^0.21.3"
gradio = "^4.19.2"
numpy = "^1.26.4"
tqdm = "^4.66.2"
librosa = "^0.10.1"



[tool.poetry.group.audio.dependencies]
julius = "^0.2.7"
soundfile = "^0.12.1"
av = "^11.0.0"
einops = "^0.7.0"
flashy = "^0.0.2"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
num2words = "^0.5.13"
sentencepiece = "^0.2.0"
spacy = "^3.7.4"
transformers = "^4.38.2"
demucs = "^4.0.1"
encodec = "^0.1.1"
protobuf = "^4.25.3"

[tool.poetry.group.metavoice.dependencies]
tiktoken = "^0.6.0"
ninja = "^1.11.1.1"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
tyro = "^0.7.3"
deepfilternet = "^0.5.6"
pydub = "^0.25.1"


[tool.poetry.group.dev.dependencies]
black = "24.2.0"             # The uncompromising code formatter.
isort = "5.13.2"              #A Python utility / library to sort Python imports.


[tool.black]
line_length = 120
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
ensure_newline_before_comments = true


[tool.poe.tasks]
isort = "poetry run isort fam"
black = "poetry run black fam"
serving = "poetry run python serving.py"
app = "poetry run python app.py "


[tool.poe.tasks.sample]
shell="poetry run python fam/llm/sample.py --huggingface_repo_id='metavoiceio/metavoice-1B-v0.1' --spk_cond_path='assets/bria.mp3'"
env = { PYTORCH_ENABLE_MPS_FALLBACK = "1" }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
